--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@
 
 <p>Here is a little information about the author or the blog.</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 hidden-xs hidden-sm">
                                     </div>
             </div>
         </div>
